// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renders correctly 1`] = `
<div
  className="header"
>
  <div
    className="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
  >
    <div
      className="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
    >
      <h1>
        Stats for 
        something
      </h1>
    </div>
    <div
      className="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-5 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-3 css-g8jdsd-MuiGrid2-root"
    >
      <ul>
        <li>
          <button
            className="button-header"
            id=""
            onClick={[Function]}
          >
            Check
             team
          </button>
        </li>
        <li>
          <button
            className="button-header"
            id=""
            onClick={[Function]}
          >
            Check
             season
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`season renders correctly 1`] = `
<div
  className="header"
>
  <div
    className="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
  >
    <div
      className="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
    >
      <h1>
        Stats for 
        season
      </h1>
    </div>
    <div
      className="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-5 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-3 css-g8jdsd-MuiGrid2-root"
    >
      <ul>
        <li>
          <button
            className="button-header"
            id=""
            onClick={[Function]}
          >
            Check
             team
          </button>
        </li>
        <li>
          <button
            className="button-header"
            id="header-active"
            onClick={[Function]}
          >
            Check
             season
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`team renders correctly 1`] = `
<div
  className="header"
>
  <div
    className="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
  >
    <div
      className="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
    >
      <h1>
        Stats for 
        team
      </h1>
    </div>
    <div
      className="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-5 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-3 css-g8jdsd-MuiGrid2-root"
    >
      <ul>
        <li>
          <button
            className="button-header"
            id="header-active"
            onClick={[Function]}
          >
            Check
             team
          </button>
        </li>
        <li>
          <button
            className="button-header"
            id=""
            onClick={[Function]}
          >
            Check
             season
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
